2013-12-11  Christoph Redl <redl@kr.tuwien.ac.at>

	* checkout_build_owlcpp.cpp: Add owlcpp for
	RepairModelGenerator.
	* owlcpp/Makefile.am: Likewise.

2013-11-18  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/PhantomPlugin.cpp: Add support for dummy implementations
	of external predicates.
	* include/dlvhex2/PhantomPlugin.h: Likewise.
	* src/dlvhex.cpp: Likewise.

2013-08-19  Peter Schueller <peterschueller@sabanciuniv.edu>

	Release 2.2.0
	* NEWS: summarizing changes
	* src/Makefile.am: Increasing Version numbers.
	* configure.ac: Likewise.

2013-05-22  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/Registry.h: Introduce auxiliary variable
	symbols.
	* src/Registry.cpp: Likewise.
	* include/dlvhex2/FunctionPlugin.h: Add rewriter to transform
	Gringo function syntax to external atoms.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-27  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/FunctionPlugin.h: Implement external atoms for
	function symbol processing.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-25  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/HexGrammar.tcc: Add basic support for function
	symbols.
	* include/dlvhex2/HexGrammar.h: Likewise.
	* include/dlvhex2/Registry.h: Likewise.
	* include/dlvhex2/Term.h: Likewise.
	* src/Registry.cpp: Likewise.
	* src/Term.cpp: Likewise.
	* src/Printer.cpp: Likewise.

2013-03-12  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/LiberalSafetyChecker.h: Implement plugin interface for
	safety checkers.
	* src/LiberalSafetyChecker.cpp: Likewise.

2013-03-04  Peter Schueller <peterschueller@sabanciuniv.edu>

	* include/dlvhex2/ClaspSolver.h: More efficiency improvments by using
	different data structures/algorithms.
	* src/ClaspSolver.cpp: Likewise.

2013-01-27  Peter Schueller <peterschueller@sabanciuniv.edu>

	* src/dlvhex.cpp: Handling signals to shutdown and display statistics.

2013-01-21  Peter Schueller <peterschueller@sabanciuniv.edu>
