@@ -50,6 +50,9 @@ struct Rule:
   // the IDs of literals in the body of this rule
   Tuple body;
 
+  // the IDs of literals used as guards for the head of this rule
+  Tuple headGuard;
+
   // only for lparse weight rules (not to be confused with weak constraints!)
   Tuple bodyWeightVector;
   ID bound;
@@ -59,19 +62,28 @@ struct Rule:
   ID level;
 
   Rule(IDKind kind):
-    kind(kind), head(), body(), bound(ID_FAIL), weight(ID_FAIL), level(ID_FAIL)
+    kind(kind), head(), headGuard(), body(), bound(ID_FAIL), weight(ID_FAIL), level(ID_FAIL)
       { assert(ID(kind,0).isRule()); }
   Rule(IDKind kind, const Tuple& head, const Tuple& body):
-    kind(kind), head(head), body(body), bound(ID_FAIL), weight(ID_FAIL), level(ID_FAIL)
+    kind(kind), head(head), body(body), headGuard(), bound(ID_FAIL), weight(ID_FAIL), level(ID_FAIL)
+      { assert(ID(kind,0).isRule()); }
+  Rule(IDKind kind, const Tuple& head, const Tuple& body, const Tuple& headGuard):
+    kind(kind), head(head), body(body), headGuard(headGuard), bound(ID_FAIL), weight(ID_FAIL), level(ID_FAIL)
       { assert(ID(kind,0).isRule()); }
   Rule(IDKind kind, const Tuple& head, const Tuple& body, ID weight, ID level):
-    kind(kind), head(head), body(body), bound(ID_FAIL), weight(weight), level(level)
+    kind(kind), head(head), body(body), headGuard(), bound(ID_FAIL), weight(weight), level(level)
+      { assert(ID(kind,0).isRule()); }
+  Rule(IDKind kind, const Tuple& head, const Tuple& body, const Tuple& headGuard, ID weight, ID level):
+    kind(kind), head(head), body(body), headGuard(headGuard), bound(ID_FAIL), weight(weight), level(level)
       { assert(ID(kind,0).isRule()); }
   Rule(IDKind kind, ID weight, ID level):
-    kind(kind), head(), body(), bound(ID_FAIL), weight(weight), level(level)
+    kind(kind), head(), body(), headGuard(), bound(ID_FAIL), weight(weight), level(level)
       { assert(ID(kind,0).isRule()); }
   Rule(IDKind kind, const Tuple& head, const Tuple& body, const Tuple& bodyWeightVector, ID bound):
-    kind(kind), head(head), body(body), bodyWeightVector(bodyWeightVector), bound(bound), weight(ID_FAIL), level(ID_FAIL)
+    kind(kind), head(head), body(body), headGuard(), bodyWeightVector(bodyWeightVector), bound(bound), weight(ID_FAIL), level(ID_FAIL)
+      { assert(ID(kind,0).isWeightRule()); assert(body.size() == bodyWeightVector.size()); }
+  Rule(IDKind kind, const Tuple& head, const Tuple& body, const Tuple& headGuard, const Tuple& bodyWeightVector, ID bound):
+    kind(kind), head(head), body(body), headGuard(headGuard), bodyWeightVector(bodyWeightVector), bound(bound), weight(ID_FAIL), level(ID_FAIL)
       { assert(ID(kind,0).isWeightRule()); assert(body.size() == bodyWeightVector.size()); }
   inline bool isEAGuessingRule() const
     { return head.size() == 2 && head[0].isExternalAuxiliary() && head[1].isExternalAuxiliary(); }
